# OptiFolio

./: README.md  pyproject.toml
cfg/: parameters.yaml
src/: backtest.py  data_loader.py  main.py  port_optimizer.py  utils.py
