[tool.poetry]
name = "optifolio"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
pyportfolioopt = "^1.5.5"
pyyaml = "^6.0.1"
yfinance = "^0.2.38"
loguru = "^0.7.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
